--- a/_apps/2017-01-pairs.md
+++ b/_apps/2017-01-pairs.md
@@ -1,7 +1,7 @@
 ---
 date: 2017-01-01 00:00:00 +0000
 title: Pairs
-description: Simple, clean card match memory game with multiple image sets.
 image: /res/images/banner_pairs.png
 link: https://play.google.com/store/apps/details?id=com.playsprout.pairs
 ---
+Simple, clean card match memory game with multiple image sets.
