--- a/404.md
+++ b/404.md
@@ -1,6 +1,10 @@
 ---
 title: Page not found - 404 error
 permalink: /404.html
+redirect_from:
+- /404/index.html
+- /404/
+- /404.md
 sitemap: false
 ---
 
