Update GitHub stats

--- a/i18n/de.yml
+++ b/i18n/de.yml
@@ -40,6 +40,8 @@ githubOrganizations:
   other: "Organisationen"
 githubFollowers:
   other: "Follower"
+githubCommits:
+  other: "Commits"
 programmingLanguage:
   other: "Sprache"
 topRepository:
