--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -48,3 +48,13 @@ topRepository:
   other: "Top repository"
 moreRepositories:
   other: "More repositories"
+doi:
+  other: "DOI"
+doiDescription:
+  other: "Digital Object Identifier"
+bibtex:
+  other: "BibTeX"
+copyBibtex:
+  other: "Copy BibTeX"
+paper:
+  other: "Paper"
