--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -94,3 +94,11 @@ design:
   other: "Design"
 social:
   other: "Social"
+researchAssistantBigDataAnalytics:
+  other: "Research Assistant Big Data Analytics"
+selfEmployedFullStackSoftwareDevelopment:
+  other: "Self-Employed Full-Stack Software Development"
+minijobEventManagementTeamLeader:
+  other: "Minijob Event Management and Team Leader"
+internshipSoftwareDevelopmentSystemAdministration:
+  other: "Internship Software Development and System Administration"
