--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -101,4 +101,4 @@ selfEmployedFullStackSoftwareDevelopment:
 minijobEventManagementTeamLeader:
   other: "Minijob Event Management and Team Leader"
 internshipSoftwareDevelopmentSystemAdministration:
-  other: "Internship Software Development and System Administration"
+  other: "Student Internship Software Development and System Administration"
