--- a/i18n/de.yml
+++ b/i18n/de.yml
@@ -96,6 +96,8 @@ social:
   other: "Sozial"
 researchAssistantBigDataAnalytics:
   other: "Wissenschaftliche Hilfskraft Big Data Analytics"
+researchAssistantMediaContentWeb:
+  other: "Wissenschaftliche Hilfskraft Medien, Contentmanagement und Webtechnologien"
 selfEmployedFullStackSoftwareDevelopment:
   other: "Einzelgewerbe Full-Stack Softwareentwicklung"
 minijobEventManagementTeamLeader:
