--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -96,6 +96,8 @@ social:
   other: "Social"
 researchAssistantBigDataAnalytics:
   other: "Research Assistant Big Data Analytics"
+researchAssistantMediaContentWeb:
+  other: "Research Assistant Media, Content Management, and Web Technology"
 selfEmployedFullStackSoftwareDevelopment:
   other: "Self-Employed Full-Stack Software Development"
 minijobEventManagementTeamLeader:
