--- a/i18n/de.yml
+++ b/i18n/de.yml
@@ -95,12 +95,12 @@ design:
 social:
   other: "Sozial"
 researchAssistantBigDataAnalytics:
-  other: "Wissenschaftliche Hilfskraft Big Data Analytics"
+  other: "Wissenschaftliche Hilfskraft Big Data Analytics."
 researchAssistantMediaContentWeb:
-  other: "Wissenschaftliche Hilfskraft Medien, Contentmanagement und Webtechnologien"
+  other: "Wissenschaftliche Hilfskraft Medien, Contentmanagement und Webtechnologien."
 selfEmployedFullStackSoftwareDevelopment:
-  other: "Einzelgewerbe Full-Stack Softwareentwicklung"
+  other: "Einzelgewerbe Full-Stack Softwareentwicklung."
 minijobEventManagementTeamLeader:
-  other: "Minijob Eventmanagement und Teamleitung"
+  other: "Minijob Eventmanagement und Teamleitung."
 internshipSoftwareDevelopmentSystemAdministration:
-  other: "Schülerpraktikum Softwareentwicklung und Systemadministration"
+  other: "Schülerpraktikum Softwareentwicklung und Systemadministration."
