--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -95,12 +95,12 @@ design:
 social:
   other: "Social"
 researchAssistantBigDataAnalytics:
-  other: "Research Assistant Big Data Analytics"
+  other: "Research assistant Big Data Analytics."
 researchAssistantMediaContentWeb:
-  other: "Research Assistant Media, Content Management, and Web Technology"
+  other: "Research assistant Media, Content Management, and Web Technology."
 selfEmployedFullStackSoftwareDevelopment:
-  other: "Self-Employed Full-Stack Software Development"
+  other: "Self-employed full-stack software development."
 minijobEventManagementTeamLeader:
-  other: "Minijob Event Management and Team Leader"
+  other: "Minijob event management and team leader."
 internshipSoftwareDevelopmentSystemAdministration:
-  other: "Student Internship Software Development and System Administration"
+  other: "Student internship software development and system administration."
