--- a/i18n/de.yml
+++ b/i18n/de.yml
@@ -104,3 +104,5 @@ minijobEventManagementTeamLeader:
   other: "Minijob Eventmanagement und Teamleitung."
 internshipSoftwareDevelopmentSystemAdministration:
   other: "Schülerpraktikum Softwareentwicklung und Systemadministration."
+germanScholarshipDescription:
+  other: "Gemeinsames Stipendium der Landesbank Baden-Württemberg und der Bundesregierung."
