--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -104,3 +104,5 @@ minijobEventManagementTeamLeader:
   other: "Minijob event management and team leader."
 internshipSoftwareDevelopmentSystemAdministration:
   other: "Student internship software development and system administration."
+germanScholarshipDescription:
+  other: "Joint scholarship from the Landesbank Baden-Württemberg and the German Government."
