Add clones stats

--- a/i18n/de.yml
+++ b/i18n/de.yml
@@ -42,6 +42,8 @@ githubFollowers:
   other: "Follower"
 githubCommits:
   other: "Commits"
+githubClones:
+  other: "Clones"
 programmingLanguage:
   other: "Sprache"
 topRepository:
