--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -42,6 +42,8 @@ githubFollowers:
   other: "followers"
 githubCommits:
   other: "commits"
+githubClones:
+  other: "clones"
 programmingLanguage:
   other: "Language"
 topRepository:
