--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -16,6 +16,8 @@ slides:
   other: "Slides"
 thesis:
   other: "Thesis"
+ongoing:
+  other: "ongoing"
 certificate:
   other: "Certificate"
 pageNotFound:
