--- a/i18n/de.yml
+++ b/i18n/de.yml
@@ -110,3 +110,5 @@ internshipSoftwareDevelopmentSystemAdministration:
   other: "Schülerpraktikum Softwareentwicklung und Systemadministration."
 germanScholarshipDescription:
   other: "Gemeinsames Stipendium der Landesbank Baden-Württemberg und der Bundesregierung."
+researcherDatabasesInformationSystems:
+  other: "Wissenschaftlicher Mitarbeiter Datenbanken und Informationssysteme."
