--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -110,3 +110,5 @@ internshipSoftwareDevelopmentSystemAdministration:
   other: "Student internship software development and system administration."
 germanScholarshipDescription:
   other: "Joint scholarship from the Landesbank Baden-Württemberg and the German Government."
+researcherDatabasesInformationSystems:
+  other: "Research associate Databases and Information Systems."
